Design course details page with responsive.

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -29,7 +29,7 @@
   @apply bg-white dark:bg-slate-600
 }
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -51,7 +51,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button{
